<resources>
    <string name="app_name" translatable="false">BitTube</string>
    <string name="login_activity_name" translatable="false">BitTube</string>
    <string name="wallet_activity_name">Wallet</string>
    <string name="menu_testnet">Testnet</string>
    <string name="menu_about">About</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_info">Details</string>
    <string name="menu_receive">Receive</string>
    <string name="menu_rename">Rename &#8230;</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_backup">Backup</string>
    <string name="password_weak">Continue typing &#8230;</string>
    <string name="password_fair">Meh &#8230;</string>
    <string name="password_good">C\'mon, you can do better!</string>
    <string name="password_strong">Getting there &#8230;</string>
    <string name="password_very_strong">Yeah baby, h4x0r style!</string>
    <string name="label_login_wallets">Wallets</string>
    <string name="label_credits"></string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_close">Close</string>
    <string name="label_wallet_advanced_details">Touch for detailed information</string>
    <string name="label_send_success">Successfully sent</string>
    <string name="label_send_done">Done</string>
    <string name="label_receive_info_gen_qr_code">Touch for QR Code</string>
    <string name="info_send_prio_fees">Higher Priority = Higher Fees</string>
    <string name="info_xmrto_enabled">BTC payment enabled, tap for more info.</string>
    <string name="info_xmrto"><![CDATA[
        <b>You entered a Bitcoin address.</b><br/>
        <i>You&apos;ll send XMR and the receiver will get BTC using the <b>XMR.TO</b> service.</i>
    ]]></string>
    <string name="info_send_xmrto_success_order_label">XMR.TO Order</string>
    <string name="info_send_xmrto_success_sending">Sending</string>
    <string name="info_send_xmrto_success_status_label">Status:</string>
    <string name="info_send_xmrto_success_btc">%1$s BTC</string>
    <string name="info_send_xmrto_success_status">%1$s is %1$s (#%1$d)</string>
    <string name="info_txdetails_xmrto_key">Key:</string>
    <string name="info_txdetails_xmrto_address">Address:</string>
    <string name="info_txdetails_xmrto_status">Status:</string>
    <string name="info_txdetails_xmrto_amount">%1$s BTC</string>
    <string name="info_send_xmrto_paid">Confirmation Pending</string>
    <string name="info_send_xmrto_unpaid">Payment Pending</string>
    <string name="info_send_xmrto_error">XMR.TO Error (%1$s)</string>
    <string name="info_send_xmrto_sent">BTC Sent!</string>
    <string name="info_send_xmrto_query">Querying &#8230;</string>
    <string name="info_send_xmrto_parms"><![CDATA[
        <b>You can send %1$s &#8212; %2$s BTC</b>.<br/>
        <i><b>XMR.TO</b> is giving you an exchange rate of <b>%3$s BTC</b> <u>right now</u></i>.
    ]]></string>
    <string name="info_send_xmrto_zeroconf"><![CDATA[
        <i>Amounts up to <b>%1$s BTC</b> will be sent <u>instantly</u>!</i>
    ]]></string>
    <string name="send_available_btc">Balance: %2$s BTC (%1$s TUBE)</string>
    <string name="info_paymentid_intergrated">Payment ID integrated</string>
    <string name="info_prepare_tx">Preparing your transaction</string>
    <string name="label_send_progress_xmrto_create">Creating XMR.TO Order</string>
    <string name="label_send_progress_xmrto_query">Querying XMR.TO Order</string>
    <string name="label_send_progress_create_tx">Preparing BitTube Transaction</string>
    <string name="label_send_progress_queryparms">Querying xmr.to parameters</string>
    <string name="label_generic_xmrto_error">XMR.TO ERROR</string>
    <string name="text_generic_xmrto_error">Code: %1$d</string>
    <string name="text_retry">Touch to retry</string>
    <string name="text_noretry_monero">Now we\'re stuck here!</string>
    <string name="text_noretry">Uh-oh, XMR.TO does not seem be available right now!</string>
    <string name="text_send_btc_amount">%1$s BTC = %2$s TUBE</string>
    <string name="text_send_btc_rate">(Rate: %1$s BTC/TUBE)</string>
    <string name="label_send_settings_advanced">Advanced:</string>
    <string name="label_send_btc_details">Click for more details</string>
    <string name="label_send_btc_xmrto_info">Visit xmr.to for support &amp; tracking</string>
    <string name="label_send_txinfo">See TX details for more details</string>
    <string name="label_send_btc_xmrto_key_lb">Secret Key\nXMR.TO</string>
    <string name="label_send_btc_xmrto_key">XMR.TO Secret Key</string>
    <string name="label_send_btc_address">Destination BTC Address</string>
    <string name="label_send_btc_amount">Amount</string>
    <string name="label_send_btc_create_order">Creating XMR.TO Order</string>
    <string name="label_send_btc_retry">Touch to retry</string>
    <string name="label_send_txid">Transaction ID</string>
    <string name="label_send_address">Destination Address</string>
    <string name="label_send_payment_id">Payment ID</string>
    <string name="label_send_notes">Notes</string>
    <string name="backup_progress">Backup in progress</string>
    <string name="archive_progress">Archive in progress</string>
    <string name="rename_progress">Rename in progress</string>
    <string name="open_progress">Checking daemon connection</string>
    <string name="service_progress">Wrapping things up &#8230;\nThis can take a while!</string>
    <string name="backup_success">Backup successful</string>
    <string name="backup_failed">Backup failed!</string>
    <string name="archive_success">Archive successful</string>
    <string name="archive_failed">Archive failed!</string>
    <string name="delete_failed">Delete failed!</string>
    <string name="rename_failed">Rename failed!</string>
    <string name="label_daemon">Node</string>
    <string name="prompt_daemon">([&lt;user&gt;:&lt;pass&gt;@]&lt;daemon&gt;[:&lt;port&gt;])</string>
    <string name="prompt_mainnet">Net Selection</string>
    <string name="connect_stagenet">StageNet</string>
    <string name="connect_testnet">TestNet</string>
    <string name="connect_mainnet"></string>
    <string name="status_walletlist_loading">Loading Wallet List</string>
    <string name="status_wallet_loading">Loading Wallet &#8230;</string>
    <string name="status_wallet_unloading">Saving Wallet</string>
    <string name="status_wallet_unloaded">Wallet saved</string>
    <string name="status_wallet_unload_failed">Wallet save failed!</string>
    <string name="status_wallet_connecting">Connecting &#8230;</string>
    <string name="status_wallet_connect_failed">Node connection failed!\nCheck username/password</string>
    <string name="status_wallet_connect_timeout">Node connection timed out!\nTry again or another.</string>
    <string name="status_wallet_node_invalid">Node invalid!\nTry another.</string>
    <string name="status_wallet_connect_ioex">Cannot reach node!\nTry again or another.</string>
    <string name="status_working">Working on it &#8230;</string>
    <string name="status_wallet_disconnected">Disconnected</string>
    <string name="status_transaction_sent">Transaction sent!</string>
    <string name="status_transaction_failed">Transaction failed: %1$s</string>
    <string name="status_transaction_prepare_failed">Could not create transaction!</string>
    <string name="send_xmrto_timeout">Dude, you waited too long!</string>
    <string name="service_busy">I am still busy with your last wallet &#8230;</string>
    <string name="prompt_rename">Rename %1$s</string>
    <string name="prompt_password">Password for %1$s</string>
    <string name="prompt_send_password">Confirm Password</string>
    <string name="bad_password">Incorrect password!</string>
    <string name="bad_wallet">Wallet does not exist!</string>
    <string name="error_not_wallet">This is not a wallet!</string>
    <string name="prompt_daemon_missing">Daemon address must be set!</string>
    <string name="prompt_wrong_net">Wallet does not match selected net</string>
    <string name="warn_daemon_unavailable">Cannot connect to daemon! Try again.</string>
    <string name="panic">Something\'s wrong!</string>
    <string name="label_watchonly">(Watch Only)</string>
    <string name="label_wallet_receive">Receive</string>
    <string name="label_wallet_send">Give</string>
    <string name="title_amount">Amount</string>
    <string name="title_date">Date</string>
    <string name="xmr_unconfirmed_amount">+ %1$s TUBE unconfirmed</string>
    <string name="xmr" translatable="false">TUBE</string>
    <string name="label_transactions">Transactions</string>
    <string name="text_daemonConnected">Daemon connected!</string>
    <string name="service_description">BitTube Service</string>
    <string name="local_service_started">BitTube Service Running</string>
    <string name="local_service_stopped">BitTube Service Stopped</string>
    <string name="local_service_label">BitTube Service</string>
    <string name="local_service_connected">BitTube Service Connected</string>
    <string name="local_service_disconnected">BitTube Service Disconnected</string>
    <string name="status_synced">Synced:</string>
    <string name="status_remaining">Blocks remaining</string>
    <string name="status_syncing">Scanning:</string>
    <string name="prompt_problems">Problems</string>
    <string name="message_strorage_not_writable">External Storage is not writable! Panic!</string>
    <string name="message_strorage_not_permitted">We really need those External Storage permissions!</string>
    <string name="message_camera_not_permitted">No camera = No QR scanning!</string>
    <string name="label_copy_viewkey">View Key</string>
    <string name="label_copy_spendKey">Spend Key</string>
    <string name="label_copy_address">Public Address</string>
    <string name="label_copy_xmrtokey">XMR.TO Key</string>
    <string name="message_copy_viewkey">View Key copied to clipboard!</string>
    <string name="message_copy_xmrtokey">XMR.TO Key copied to clipboard!</string>
    <string name="message_copy_address">Wallet Address copied to clipboard!</string>
    <string name="message_copy_txid">Transaction ID copied to clipboard!</string>
    <string name="message_noselect_seed">Selecting seed disabled for security reasons!</string>
    <string name="message_noselect_key">Selecting spend key disabled for security reasons!</string>
    <string name="message_nocopy">Copy disabled for security reasons!</string>
    <string name="generate_name_hint">Wallet Name</string>
    <string name="generate_password_hint">Wallet Passphrase</string>
    <string name="generate_buttonGenerate">Create wallet</string>
    <string name="generate_button_accept">I have noted these 25 words!</string>
    <string name="generate_address_hint">Public Address</string>
    <string name="generate_viewkey_hint">View Key</string>
    <string name="generate_spendkey_hint">Spend Key</string>
    <string name="generate_mnemonic_hint">25-Word Mnemonic Seed</string>
    <string name="generate_restoreheight_hint">Restore Height or Date (YYYY-MM-DD)</string>
    <string name="generate_password_label">Password</string>
    <string name="generate_address_label">Public Address</string>
    <string name="generate_viewkey_label">View Key</string>
    <string name="generate_spendkey_label">Spend Key</string>
    <string name="generate_mnemonic_label">Mnemonic Seed</string>
    <string name="send_address_hint">Receiver\'s TUBE Address</string>
    <string name="send_paymentid_hint">Payment ID (optional)</string>
    <string name="send_generate_paymentid_hint">Generate</string>
    <string name="send_qr_hint">Scan</string>
</resources>