<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/shape_rect_round"
        android:padding="16dp"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.bittube.wallet.widget.InputLayout
                android:id="@+id/il_wallet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:counterEnabled="true"
                app:maxCounter="20"
                app:hint="@string/generate_name_hint"/>

            <com.bittube.wallet.widget.InputLayout
                android:id="@+id/il_wallet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:hint="@string/generate_password_hint"/>

            <com.bittube.wallet.widget.InputLayout
                android:id="@+id/il_wallet_mnemonic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:hint="@string/generate_mnemonic_hint"
                app:type="multiline"
                android:visibility="gone"/>

            <com.bittube.wallet.widget.InputLayout
                android:id="@+id/il_wallet_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:counterEnabled="true"
                app:maxCounter="97"
                app:hint="@string/generate_address_hint"
                app:type="multiline"
                android:visibility="gone"/>

            <com.bittube.wallet.widget.InputLayout
                android:id="@+id/il_wallet_viewkey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:counterEnabled="true"
                app:maxCounter="64"
                app:hint="@string/generate_viewkey_hint"
                app:type="multiline"
                android:visibility="gone"/>

            <com.bittube.wallet.widget.InputLayout
                android:id="@+id/il_wallet_spendkey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:hint="@string/generate_spendkey_hint"
                app:type="multiline"
                android:visibility="gone"/>

            <com.bittube.wallet.widget.InputLayout
                android:id="@+id/il_wallet_restoreheight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:hint="@string/generate_restoreheight_hint"
                app:type="date"
                android:visibility="gone"/>

            <Button
                android:id="@+id/bGenerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/generate_buttonGenerate"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>