<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/shape_rect_round"
    android:padding="20dp"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pbProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            tools:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:orientation="horizontal">


            <TextView
                android:text="@string/generate_password_label"
                style="@style/label_bold" />

            <TextView
                android:id="@+id/tvWalletPassword"
                style="@style/MoneroText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="***"
                android:textAlignment="center" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/header_top">

            <TextView
                style="@style/label_bold"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/generate_address_label" />

            <ImageButton

                android:id="@+id/bCopyAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="?android:selectableItemBackground"
                android:clickable="false"
                android:src="@drawable/copy_grey" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvWalletAddress"
            style="@style/MoneroText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/data_top" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/header_top">

            <TextView
                style="@style/label_bold"
                android:text="@string/generate_mnemonic_label" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvWalletMnemonic"
            style="@style/MoneroText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/data_top"
            android:padding="16dp"
            android:background="@drawable/shape_rect_round" />

        <Button
            android:id="@+id/bAccept"
            style="@style/button_moreno_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_top"
            android:text="@string/generate_button_accept"
            android:visibility="gone"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/bAdvancedInfo"
            style="@style/MoneroFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/section_top"
            android:background="?android:selectableItemBackground"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_add_circle_outline"
            android:text="@string/label_wallet_advanced_details"
            android:visibility="gone"
            tools:visibility="visible"/>

        <LinearLayout
            android:id="@+id/llAdvancedInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="@dimen/section_top"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/label_bold"
                    android:text="@string/generate_viewkey_label" />

                <ImageButton
                    android:id="@+id/bCopyViewKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="?android:selectableItemBackground"
                    android:src="@drawable/copy_grey" />
            </FrameLayout>

            <TextView
                android:id="@+id/tvWalletViewKey"
                style="@style/MoneroText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/data_top" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_top">

                <TextView
                    style="@style/label_bold"
                    android:text="@string/generate_spendkey_label" />
            </FrameLayout>

            <TextView
                android:id="@+id/tvWalletSpendKey"
                style="@style/MoneroText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/data_top" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>