<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etDummy"
        android:layout_width="0dp"
        android:layout_height="0dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_rect_round"
        android:padding="20dp"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.m2049r.xmrwallet.widget.InputLayout
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                app:hint="@string/send_address_hint"
                android:layout_marginBottom="8dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvPaymentIdIntegrated"
                    style="@style/MoneroText.Info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_margin="8dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_check_gray_24dp"
                    android:gravity="center"
                    android:text="@string/info_paymentid_intergrated"
                    android:textSize="18sp"
                    android:visibility="gone" />


                <LinearLayout
                    android:id="@+id/llXmrTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:paddingTop="8dp"
                        android:src="@drawable/gunther_24dp" />

                    <TextView
                        android:id="@+id/tvXmrTo"
                        style="@style/MoneroText.Info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="start|top"
                        android:singleLine="false"
                        android:textSize="18sp"
                        tools:text="@string/info_xmrto" />
                </LinearLayout>

            </FrameLayout>

            <RelativeLayout
                android:id="@+id/rlPaymentId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.m2049r.xmrwallet.widget.InputLayout
                    android:id="@+id/etPaymentId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/bPaymentId"
                    app:counterEnabled="true"
                    app:hint="@string/send_paymentid_hint"
                    app:maxCounter="16" />


                <LinearLayout
                    android:id="@+id/bPaymentId"
                    style="@style/InputLayout_button"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:src="@drawable/generate" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_generate_paymentid_hint"
                        android:textAllCaps="true"
                        android:textColor="@color/moneroBlue"
                        android:textSize="10sp" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>


    </ScrollView>


    <RelativeLayout
        android:id="@+id/bScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/shape_rect_round"
        android:clickable="true">

        <TextView
            style="@style/MoneroText.Confirm.Label"
            android:textAllCaps="true"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/ic_scan"
            android:gravity="center"
            android:text="@string/send_qr_hint"
            android:textSize="20dp" />

    </RelativeLayout>

</LinearLayout>